# NorthstarPlugins

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml  toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
nix/: plugins.nix
ranim/: Cargo.toml
serialized_io/: Cargo.toml
serialized_io/src/: lib.rs  sqapi.rs
sqhooks/: Cargo.toml
sqhooks/src/: bindings.rs  hook_dispatch.rs  hook_install.rs  lib.rs  pre_sqvm.rs  utils.rs  variadic.rs
