[workspace]
resolver = "3"

members = ["ranim", "serialized_io"]

[workspace.dependencies]
rrplug = { git = "https://github.com/catornot/rrplug.git" }
# rrplug = { path = "../rrplug" }
windows-sys = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader", "Win32_System_Threading"] }

# for crates that deal with ub a lot
[profile.release-debug]
inherits = "dev"
opt-level = 3
debug = true
